# codewars.com

./: .gitignore
C++/: CMakeLists.txt  Equals.hpp
C++/Complementary DNA/: CMakeLists.txt  README.md  main.cpp
C++/Factorial/: CMakeLists.txt  README.md  main.cpp
C++/GTest/: GTest.cmake
C++/Kolakoski Sequence/: CMakeLists.txt  README.md  main.cpp
C++/Reduce but Grow/: README.md
C++/Reverse Words/: CMakeLists.txt  README.md  main.cpp
C++/Split Strings/: CMakeLists.txt  README.md  main.cpp
C++/Sum of odd numbers/: CMakeLists.txt  README.md  main.cpp
C++/Unique In Order/: CMakeLists.txt  README.md  main.cpp
Python/Hangman!/: README.md  main.py
